[package]
name = "echo-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/vadorovsky/aya", branch = "fix-str-helpers-verifier" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya-log", branch="main" }
echo-common = { path = "../echo-common" }

[patch.'https://github.com/aya-rs/aya']
aya-bpf = { git = "https://github.com/vadorovsky/aya", branch = "fix-str-helpers-verifier" }

[[bin]]
name = "echo"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
